# ft_irc

./: .gitignore  CMakeLists.txt  Makefile  config.conf  operators.conf
includes/: Channel.hpp  Client.hpp  Command.hpp  ListenSocket.hpp  Parser.hpp  Reply.hpp  Socket.hpp  commands.hpp  types.hpp
irc1_2/: CMakeLists.txt
irc1_2/srcs/: CMakeLists.txt  Client.cpp  Client.hpp  ListeningSocket.cpp  ListeningSocket.hpp  Parser.cpp  Parser.hpp  Socket.cpp  Socket.hpp  main.cpp
srcs/: Channel.cpp  Client.cpp  Client.hpp  Command.cpp  Command.hpp  ListenSocket.cpp  ListeningSocket.cpp  ListeningSocket.hpp  Parser.cpp  Parser.hpp  Reply.cpp  Reply.hpp  SUBD.cpp  Socket.cpp  config.conf  experimental.cpp  main.cpp
srcs/commands/: channels.cpp  messages.cpp  monitoring.cpp  oper.cpp  pingpong.cpp  register.cpp  utils.cpp
